# ustraj

./: LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
devtools/envs/: base.yaml
docs/: development.md
docs/scripts/: gen_ref_pages.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/development/: index.html
latest/reference/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/analysis/: index.html
latest/search/: search_index.json
ustraj/: __init__.py  _cli.py  analysis.py
ustraj/tests/: test_ustraj.py
