[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ustraj"
description = "A collection of scripts for analysing trajectory files collected during US simulations"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
ustraj = "ustraj._cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ustraj*"]

[tool.setuptools_scm]

[tool.ruff.lint]
ignore = ["C901"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
